# ParticleSystem

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
lib/: glad.c
shaders/: particle.frag  particle.vert
src/: main.cpp
